<resources>
    <string name="app_name">Cafe Order</string>
    <string name="logo_description">Логотип кафе</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="hint_name">Введите Ваше имя:</string>
    <string name="hint_password">Введите Ваш пароль:</string>
    <string name="button_create_order">Создать заказ</string>
    <string name="warning_fill_filds">Все поля должны быть заполненны</string>
    <string name="hello_user">Привет, %s! Что будете заказывать?</string>
    <string name="coffee">Кофе</string>
    <string name="tea">Чай</string>
    <string name="default_name">Клиент</string>
    <string name="default_password">1111</string>
    <string name="additions">Что добавить в ваш %s?</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лимон</string>
    <string name="choose_drink">Выберите вид напитка</string>
    <string name="button_send_description">Кнопка отправить заказ</string>
    <string-array name="tea_options">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Красный</item>
    </string-array>
    <string-array name="coffee_options">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>
    <string name="drinkAdditions">Необходимые добавки</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
</resources>